<resources>
    <string name="accept_request">"Accept request from "</string>
    <string name="accept">Accept</string>
    <string name="add">Add</string>
    <string name="app_launcher_icon">application icon</string>
    <string name="add_friends">Add Friends</string>
    <string name="add_some_friends">add some members!</string>
    <string name="add_to_group">Add to Group</string>
    <string name="app_name">Storee</string>
    <string name="friends_on_top_will_edit_first">(members on top will edit first)</string>
    <string name="change_title">Change Title</string>
    <string name="close">Close</string>
    <string name="coauthors_no_colon">"Coauthors"</string>
    <string name="coauthors">"Coauthors: "</string>
    <string name="creator">"Creator: "</string>
    <string name="decline">Decline</string>
    <string name="delete">Delete</string>
    <string name="dismiss">DISMISS</string>
    <string name="edit">Edit</string>
    <string name="editing_order">Editing Order</string>
    <string name="editing_order_long_1">You will create the first edit in the story, however, you have the OPTION of setting the order in which your members will edit the story after you.</string>
    <string name="editing_order_long_2">Long press and drag to re-order.</string>
    <string name="enter_a_title">enter a title</string>
    <string name="enter_an_intro">enter an intro</string>
    <string name="do_something">Do Something</string>
    <string name="friends">Friends</string>
    <string name="finish">Finish</string>
    <string name="go_to_story">GO TO STORY</string>
    <string name="is_up_next">is up next…</string>
    <string name="introduction">Introduction</string>
    <string name="last_edit">Last edit</string>
    <string name="members">Members</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="new_story">New Story</string>
    <string name="next">Next</string>
    <string name="notifications">Notifications</string>
    <string name="notification_channel_name">storee notification channel</string>
    <string name="notification_channel_description">provides notifications</string>
    <string name="ok">OK</string>
    <string name="open">Open</string>
    <string name="profile">Profile</string>
    <string name="queue">Queue</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="send_request">SEND REQUEST</string>
    <string name="set_editing_order">Set editing order</string>
    <string name="settings">Settings</string>
    <string name="story">Story</string>
    <string name="Storee">Storee</string>
    <string name="story_intro">Story Intro</string>
    <string name="story_title">Story Title</string>
    <string name="stories">Stories</string>
    <string name="title">Title</string>
    <string name="username">username</string>
    <string name="youre_up">You\'re up!</string>
</resources>

