<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/primaryDarkColor">
    <TextView
        android:id="@+id/dialog_friend_accept_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/accept_request"
        android:textSize="20dp"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dialog_friend_accept_text_view"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_friend_accept_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/dialog_friend_accept_text_view"
            app:layout_constraintLeft_toLeftOf="parent" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_friend_decline_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decline"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/dialog_friend_accept_text_view"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>