<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_members"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView
        android:id="@+id/fragment_members_header_big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/set_editing_order"
        android:textSize="30sp"/>
    <TextView
        android:id="@+id/fragment_members_header_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_members_header_big"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/friends_on_top_will_edit_first"
        android:textSize="20sp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_members_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_members_header_small"
        app:layout_constraintLeft_toLeftOf="parent">
    </androidx.recyclerview.widget.RecyclerView>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_members_submit_button"
        app:layout_constraintTop_toBottomOf="@id/fragment_members_recycler_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/next"/>
</androidx.constraintlayout.widget.ConstraintLayout>